Fix ICC build

"error: constexpr constructor must initialize direct base class"

Task-number: QTCREATORBUG-20598
Change-Id: Iab2e379b7ed3b0cb7f9b7c654613ec6cd3d91967
Reviewed-by: Ivan Donchevskii <ivan.donchevskii@qt.io>
Reviewed-by: Alexander Shevchenko <sav_ix@ukr.net>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>